Code first db migration creation and readme/gitignore update

--- a/MeowCore/appsettings.json
+++ b/MeowCore/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "PawnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MeowDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
