--- a/MeowCore/appsettings.json
+++ b/MeowCore/appsettings.json
@@ -8,5 +8,12 @@
   "ConnectionStrings": {
     "PawnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MeowDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "LogPathFile": "C:\\whiskerWatch\\Logs\\Index.txt"
+  },
+  "Jwt": {
+    "Key": "b8f7e2a1-4c3d-4e6a-9f2b-7c8e5d1a2b3c-4f6e-8d9a-1b2c-3d4e5f6a7b8c",
+    "ExpireMinutes": 5
+  }
 }
