--- a/MeowUIX/.gitignore
+++ b/MeowUIX/.gitignore
@@ -1,35 +1,24 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# Node modules
-node_modules/
-
-# Build output
-dist/
-build/
-out/
-
-# Expo/React Native
-.expo/
-.expo-shared/
-
-# TypeScript
-*.tsbuildinfo
-
 # Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
 
-# OS files
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
-
-# IDE files
-.vscode/
-.idea/
-
-# Environment files
-.env
-.env.local
-.env.*.local
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
