--- a/MeowUIX/tsconfig.json
+++ b/MeowUIX/tsconfig.json
@@ -1,6 +1,13 @@
 {
-  "extends": "expo/tsconfig.base",
+  "files": [],
+  "references": [
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
+  ],
   "compilerOptions": {
-    "strict": true
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
